adapt log_sdcard to support rpmsgfs
Co-authored-by: Andre Heinemans <andre.heinemans@nxp.com>
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/drivers/synapse/log_sdcard/CMakeLists.txt
+++ b/drivers/synapse/log_sdcard/CMakeLists.txt
@@ -11,6 +11,12 @@ zephyr_library_sources(
   src/writer.c
   )
 
-zephyr_link_libraries(ELMFAT)
+if(CONFIG_FAT_FILESYSTEM_ELM)
+  zephyr_link_libraries(ELMFAT)
+endif()
 
 add_dependencies(cerebri_synapse_log_sdcard synapse_pb)
+
+if(CONFIG_CEREBRI_SYNAPSE_RPMSG)
+add_dependencies(cerebri_synapse_log_sdcard cerebri_synapse_rpmsg)
+endif()
