Revert "tree-wide: Offload ZROS sense drivers to external repository (#236)"
This reverts commit 1f2611613b39ebdba2d636fcce5c65829dff7d11.

--- a/drivers/sense/Kconfig
+++ b/drivers/sense/Kconfig
@@ -3,8 +3,11 @@
 
 menu "Sense"
 
+rsource "baro/Kconfig"
+rsource "imu/Kconfig"
 rsource "accel/Kconfig"
 rsource "icm42688/Kconfig"
+rsource "mag/Kconfig"
 rsource "power/Kconfig"
 rsource "safety/Kconfig"
 rsource "sbus/Kconfig"
