--- a/drivers/sense/CMakeLists.txt
+++ b/drivers/sense/CMakeLists.txt
@@ -1,8 +1,11 @@
 # SPDX-License-Identifier: Apache-2.0
 
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_BARO baro)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_IMU imu)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_ACCEL accel)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_ICM42688 icm42688)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SBUS sbus)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_MAG mag)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_POWER power)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SAFETY safety)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_UBX_GNSS ubx_gnss)
