--- a/lib/core/common/CMakeLists.txt
+++ b/lib/core/common/CMakeLists.txt
@@ -32,6 +32,8 @@ set_source_files_properties(
 zephyr_library_sources(
   src/common.c
   src/cerebri_log.c
+  src/perf_counter.c
+  src/perf_duration.c
   ${CASADI_FILES}
   )
 
