Enable CODE_DATA_RELOCATION when using ITCM
When relocating code to ITCM, there's a nasty bug in zephyr that
discarded functions still end up in the ELF at address 0x0
Functionality wise this is not a problem but when using a debugger
it can't make sense of the first ~0x100 bytes of the ITCM

As it turns out the CODE_DATA_RELOCATION config somehow solves this
However it requires that you use zephyr_code_relocate atleast once.
Looking at basic heuristics it seems we want nanopb in ITCM anyhow
So instead of the manual ld we use the zephyr_code_relocate to relocate
the text secionts of the nanopb library.

Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/app/rdd2/CMakeLists.txt
+++ b/app/rdd2/CMakeLists.txt
@@ -144,15 +144,18 @@ target_include_directories(app SYSTEM BEFORE PRIVATE
 
 if(CONFIG_BOARD STREQUAL "vmu_rt1170")
   zephyr_linker_sources(ITCM_SECTION boards/vmu_rt1170_itcm_linker.ld)
+  zephyr_code_relocate(LIBRARY nanopb LOCATION ITCM_TEXT)
 endif()
 
 if(CONFIG_BOARD STREQUAL "mr_vmu_tropic")
   zephyr_linker_sources(ITCM_SECTION boards/mr_vmu_tropic_itcm_linker.ld)
+  zephyr_code_relocate(LIBRARY nanopb LOCATION ITCM_TEXT)
 endif()
 
 if(CONFIG_BOARD STREQUAL "mr_navq95a")
   # Relocate code to ITCM
   zephyr_linker_sources(ITCM_SECTION boards/mr_navq95a_itcm_linker.ld)
+  zephyr_code_relocate(LIBRARY nanopb LOCATION ITCM_TEXT)
   # Relocate log ring buffer to SDRAM
   zephyr_linker_sources(SECTIONS boards/navq95.ld)
   # Relocate data to OCRAM since zephyr doesn't have an auto spillover
