--- a/app/b3rb/boards/mr_navq95a_m7_flash.conf
+++ b/app/b3rb/boards/mr_navq95a_m7_flash.conf
@@ -3,6 +3,7 @@ CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_SPEED_OPTIMIZATIONS=n
 CONFIG_SIZE_OPTIMIZATIONS=n
 CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_CODE_DATA_RELOCATION=y
 
 CONFIG_DISK_ACCESS=n
 CONFIG_FS_FATFS_EXFAT=n
