--- a/app/b3rb/sample.yaml
+++ b/app/b3rb/sample.yaml
@@ -14,3 +14,8 @@ tests:
       - b3rb
     integration_platforms:
       - mr_canhubk3
+  b3rb.mr_navq95a/mimx9596/m7/flash:
+    tags:
+      - b3rb
+    integration_platforms:
+      - mr_navq95a/mimx9596/m7/flash
