--- a/app/rdd2/sample.yaml
+++ b/app/rdd2/sample.yaml
@@ -14,6 +14,13 @@ tests:
       - rdd2
     integration_platforms:
       - vmu_rt1170/mimxrt1176/cm7
-
-
-
+  rdd2.mr_vmu_tropic/mimxrt1064:
+    tags:
+      - rdd2
+    integration_platforms:
+      - mr_vmu_tropic/mimxrt1064
+  rdd2.mr_navq95a/mimx9596/m7/flash:
+    tags:
+      - rdd2
+    integration_platforms:
+      - mr_navq95a/mimx9596/m7/flash
