--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -116,6 +116,7 @@ target_include_directories(app SYSTEM BEFORE PRIVATE ${ZEPHYR_BASE}/include ${CM
 if(CONFIG_BOARD STREQUAL "mr_navq95a")
   # Relocate code to ITCM
   zephyr_linker_sources(ITCM_SECTION boards/mr_navq95a_itcm_linker.ld)
+  zephyr_code_relocate(LIBRARY nanopb LOCATION ITCM_TEXT)
   # Relocate log ring buffer to SDRAM
   zephyr_linker_sources(SECTIONS boards/navq95.ld)
 endif()
