--- a/app/rdd2/boards/mr_vmu_tropic.conf
+++ b/app/rdd2/boards/mr_vmu_tropic.conf
@@ -1,5 +1,5 @@
-CONFIG_SPEED_OPTIMIZATIONS=y
-CONFIG_SIZE_OPTIMIZATIONS=n
+#CONFIG_SPEED_OPTIMIZATIONS=y
+CONFIG_SIZE_OPTIMIZATIONS=y
 CONFIG_CODE_DATA_RELOCATION=y
 
 CONFIG_TEST=y
@@ -84,7 +84,7 @@ CONFIG_CEREBRI_SENSE_ICM42688=n
 CONFIG_CEREBRI_SENSE_SBUS=y
 CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
-CONFIG_CEREBRI_SENSE_UBX_GNSS=y
+CONFIG_ZROS_SENSE_GNSS=y
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
