--- a/app/rdd2/boards/mr_vmu_tropic.conf
+++ b/app/rdd2/boards/mr_vmu_tropic.conf
@@ -1,5 +1,5 @@
-CONFIG_SPEED_OPTIMIZATIONS=y
-CONFIG_SIZE_OPTIMIZATIONS=n
+#CONFIG_SPEED_OPTIMIZATIONS=y
+CONFIG_SIZE_OPTIMIZATIONS=y
 CONFIG_CODE_DATA_RELOCATION=y
 
 CONFIG_TEST=y
