--- a/app/b3rb/CMakeLists.txt
+++ b/app/b3rb/CMakeLists.txt
@@ -113,9 +113,10 @@ target_sources(app PRIVATE ${SOURCE_FILES})
 
 target_include_directories(app SYSTEM BEFORE PRIVATE ${ZEPHYR_BASE}/include ${CMAKE_BINARY_DIR})
 
-if(CONFIG_BOARD STREQUAL "mr_navq95a")
+if ((CONFIG_BOARD STREQUAL "mr_navq95a") OR
+  (CONFIG_BOARD STREQUAL "mr_navq95b"))
   # Relocate code to ITCM
-  zephyr_linker_sources(ITCM_SECTION boards/mr_navq95a_itcm_linker.ld)
+  zephyr_linker_sources(ITCM_SECTION boards/mr_navq95_itcm_linker.ld)
   zephyr_code_relocate(LIBRARY nanopb LOCATION ITCM_TEXT)
   # Relocate log ring buffer to SDRAM
   zephyr_linker_sources(SECTIONS boards/navq95.ld)
