rdd2: Add RTK support
By receiving RTCM3 messages through synapse_pb and forwarding them to
the modem to apply corrections.

To build with RTK support: west build -b vmu_rt1170//cm8 app/rdd2 -- \
-DEXTRA_CONF_FILE=overlay-rtk.conf

Signed-off-by: Luis Ubieda <luisf@croxel.com>

--- a/app/rdd2/sample.yaml
+++ b/app/rdd2/sample.yaml
@@ -24,3 +24,11 @@ tests:
       - rdd2
     integration_platforms:
       - mr_navq95a/mimx9596/m7/flash
+  rdd2.vmu_rt1170/rtk:
+    tags:
+      - rdd2
+      - rtk
+    extra_args:
+      - EXTRA_CONF_FILE="overlay-rtk.conf"
+    integration_platforms:
+      - vmu_rt1170/mimxrt1176/cm7
