Hardware rx working.
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>

--- a/app/esc_passthrough/prj.conf
+++ b/app/esc_passthrough/prj.conf
@@ -10,6 +10,9 @@
 # App name
 CONFIG_CEREBRI_APP_NAME="esc_passthrough"
 
+# System clock - higher tick rate for tickless kernel efficiency
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=10000
+
 # USB Device Stack (new stack - no deprecation warnings)
 CONFIG_USB_DEVICE_STACK_NEXT=y
 CONFIG_USBD_CDC_ACM_CLASS=y
@@ -36,11 +39,13 @@ CONFIG_UART_CONSOLE=y
 CONFIG_SHELL=y
 CONFIG_SHELL_BACKEND_SERIAL=y
 
-# GPIO for motor signal bit-banging
-CONFIG_GPIO=y
+# FlexIO UART driver for ESC single-wire communication
+CONFIG_NXP_FLEXIO_UART=y
+CONFIG_CLOCK_CONTROL=y
+CONFIG_PINCTRL=y
 
-# High-resolution timing for protocol bit-banging
-CONFIG_SYS_CLOCK_TICKS_PER_SEC=100000
+# GPIO still needed for shell test commands
+CONFIG_GPIO=y
 
 # Logging to console
 CONFIG_LOG=y
