--- a/drivers/zephyr/Kconfig
+++ b/drivers/zephyr/Kconfig
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 CogniPilot Foundation
+# Copyright (c) 2023-2025 CogniPilot Foundation
 # SPDX-License-Identifier: Apache-2.0
 
 menu "Out-of-tree Zephyr drivers"
