Added back filters
Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Signed-off-by: James Goppert <james.goppert@gmail.com>

--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -86,6 +86,9 @@ CONFIG_ZROS_SENSE_GNSS=y
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
+
+# Don't block boot waiting for network - auto-configure when link comes up
+CONFIG_NET_CONFIG_INIT_TIMEOUT=0
 CONFIG_CEREBRI_ACTUATE_LED_ARRAY=y
 CONFIG_CEREBRI_SENSE_POWER=y
 
