--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -77,6 +77,7 @@ CONFIG_INPUT_THREAD_STACK_SIZE=2048
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
 CONFIG_ZROS_SENSE_STREAM=y
 CONFIG_ZROS_SENSE_STREAM_IMU=y
+CONFIG_ZROS_SENSE_STREAM_IMU_DRDY_MODE=y
 
 CONFIG_CEREBRI_SENSE_RC=y
 CONFIG_ZROS_SENSE_MAG=y
