refactor rc: rename sbus interfaces, prep CRSF/ELRS, and optimize performance
- Rename sense_sbus → sense_rc and input_sbus → input_rc in preparation for CRSF/ELRS support
- Improve performance by switching from double to float
- Optimize input path by using synchronous input_mode, eliminating an extra thread and context switching
  - This is possible since SBUS/CRSF already run in their own thread and can publish directly to zros

Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/drivers/sense/CMakeLists.txt
+++ b/drivers/sense/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_ACCEL accel)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_ICM42688 icm42688)
-add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SBUS sbus)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_RC rc)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_POWER power)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_SAFETY safety)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SENSE_WHEEL_ODOMETRY wheel_odometry)
