--- a/app/rdd2/prj.conf
+++ b/app/rdd2/prj.conf
@@ -85,6 +85,7 @@ CONFIG_NET_SOCKETS=y
 
 # Network address config
 CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_INIT_TIMEOUT=0
 CONFIG_NET_STATISTICS=y
 CONFIG_NET_MGMT_EVENT_INFO=y
 CONFIG_NET_MGMT_EVENT_MONITOR=y
