--- a/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
+++ b/app/rdd2/boards/vmu_rt1170_mimxrt1176_cm7.conf
@@ -72,7 +72,6 @@ CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=8192
 CONFIG_INPUT_EVENT_DUMP=n
 CONFIG_INPUT_SHELL=n
 CONFIG_INPUT_SBUS_REPORT_FILTER=0
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
 CONFIG_ZROS_SENSE_STREAM=y
@@ -119,3 +118,19 @@ CONFIG_DEBUG_THREAD_INFO=y
 # Logging
 #CONFIG_LOG_BACKEND_NET=n
 #CONFIG_LOG_BACKEND_NET_SERVER="192.0.2.2"
+
+# USB Mass Storage for log file retrieval
+CONFIG_USB_DEVICE_STACK_NEXT=y
+CONFIG_USBD_MSC_CLASS=y
+CONFIG_CEREBRI_SYNAPSE_USB_MSC=y
+
+# Suppress noisy USB debug messages
+CONFIG_UDC_DRIVER_LOG_LEVEL_WRN=y
+CONFIG_USBD_LOG_LEVEL_WRN=y
+CONFIG_USBD_MSC_LOG_LEVEL_WRN=y
+
+# Enable runtime log filtering (required for CEREBRI_NODE_LOG_INIT to apply filters)
+CONFIG_LOG_RUNTIME_FILTERING=y
+
+# Default log level for rdd2 modules using CONFIG_CEREBRI_RDD2_LOG_LEVEL
+CONFIG_CEREBRI_RDD2_LOG_LEVEL_WRN=y
