--- a/drivers/synapse/CMakeLists.txt
+++ b/drivers/synapse/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_TOPIC topic)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_UDP udp)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_VESC_CAN vesc_can)
 add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_RPMSG rpmsg)
+add_subdirectory_ifdef(CONFIG_CEREBRI_SYNAPSE_USB_MSC usb_msc)
