mr-vmu-tropic: icm45686 use streaming api
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/app/rdd2/boards/mr_vmu_tropic.conf
+++ b/app/rdd2/boards/mr_vmu_tropic.conf
@@ -73,12 +73,12 @@ CONFIG_INPUT_SBUS_THREAD_STACK_SIZE=8192
 CONFIG_INPUT_EVENT_DUMP=n
 CONFIG_INPUT_SHELL=n
 CONFIG_INPUT_SBUS_REPORT_FILTER=0
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
 
 CONFIG_CEREBRI_SYNAPSE_LOG_SDCARD=y
-CONFIG_ZROS_SENSE_IMU=y
-CONFIG_CEREBRI_SENSE_ACCEL=n
-CONFIG_CEREBRI_SENSE_ICM42688=n
+CONFIG_ZROS_SENSE_STREAM=y
+CONFIG_ZROS_SENSE_STREAM_IMU=y
+CONFIG_ICM45686_STREAM=y
+#CONFIG_ZROS_SENSE_STREAM_IMU_DRDY_MODE=y
 
 CONFIG_CEREBRI_SENSE_RC=y
 CONFIG_ZROS_SENSE_MAG=y
