mr_canhukb344: Move IMU to streaming API
Signed-off-by: Peter van der Perk <peter.vanderperk@nxp.com>

--- a/app/b3rb/boards/mr_canhubk3_s32k344.conf
+++ b/app/b3rb/boards/mr_canhubk3_s32k344.conf
@@ -29,14 +29,16 @@ CONFIG_INPUT_SBUS_REPORT_FILTER=0
 CONFIG_INPUT_EVENT_DUMP=n
 CONFIG_INPUT_SHELL=n
 CONFIG_INPUT_MODE_SYNCHRONOUS=y
-CONFIG_INPUT_THREAD_STACK_SIZE=2048
-
 
 CONFIG_CEREBRI_SENSE_RC=y
-CONFIG_ZROS_SENSE_IMU=y
 CONFIG_ZROS_SENSE_MAG=y
 CONFIG_CEREBRI_SENSE_SAFETY=y
 CONFIG_ZROS_SENSE_GNSS=y
+CONFIG_ZROS_SENSE_STREAM=y
+CONFIG_ZROS_SENSE_STREAM_IMU=y
+CONFIG_SPI_RTIO=y
+CONFIG_ZROS_SENSE_STREAM_IMU_DRDY_MODE=y
+CONFIG_ZROS_SENSE_IMU=n
 
 CONFIG_CEREBRI_SYNAPSE_ETH_RX=y
 CONFIG_CEREBRI_SYNAPSE_ETH_TX=y
